# tx-relay-playground

./: .env  .gitignore  Cargo.toml  LIBRARY.md  NONSTANDARD.md  README.md  devenv.nix  flake.nix  justfile
config/: bitcoin-base.conf  bitcoin-permissive.conf  bitcoin.conf  bitcoin1.conf  bitcoin2.conf  ports.toml  testnet-base.conf
scripts/: bitcoin-config.sh  create-tx.sh  init-wallet.sh  init-wallets.sh
src/: bitcoin_rpc.rs  lib.rs  main.rs  nostr.rs  validation.rs
