[package]
name = "tx-relay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tx-relay-server"
path = "src/bin/tx-relay-server.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tungstenite = "0.20"
tokio-tungstenite = "0.20"
futures-util = "0.3"
url = "2.4"
hex = "0.4"
sha2 = "0.10"
secp256k1 = "0.28"
bitcoin = "0.30"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
nostr = "0.25"
