[package]
name = "tx-relay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tx-relay-server"
path = "src/bin/tx-relay-server.rs"

[dependencies]
bitcoin-nostr-relay = { git = "https://github.com/vnprc/tx-relay.git", rev = "ba7ef181" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
